<resources>
    <string name="app_name">geointeligencia_ANP_App</string>
    <string name="google_maps_key"></string>
    <string name="bienv_tit">Bienvenido</string>
    <string name="bienv_ins"></string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="q1">1. Edad: </string>
    <string name="rb1_1">Menos de 20 años.</string>
    <string name="rb1_2">De 20 años a 40 años.</string>
    <string name="rb1_3">De 40 a 60 años.</string>
    <string name="rb1_4">Más de 60 años.</string>
    <string name="q2">2. Sexo: </string>
    <string name="rb2_1">Masculino</string>
    <string name="rb2_2">Femenino</string>
    <string name="q5">5. En caso de hospedarse, ¿dónde lo hace? </string>
    <string name="rb5_1">Hotel, posada u hostal</string>
    <string name="rb5_2">Vivienda propia</string>
    <string name="rb5_3">Vivienda de familiar o amigo</string>
    <string name="rb5_4">Renta de casa o departamento</string>
    <string name="rb5_5">Ninguna, estoy de paso</string>
    <string name="q6">6. ¿Cómo se enteró de la existencia del sitio? </string>
    <string name="q6_1">Redes Sociales</string>
    <string name="q6_2">Publicidad en TV o Radio</string>
    <string name="q6_3">Revistas</string>
    <string name="q6_4">Agencias de Viajes</string>
    <string name="q7">7. ¿Cuántas veces ha visitado el ANP? </string>
    <string name="rb7_1">0</string>
    <string name="rb7_2">1 vez</string>
    <string name="rb7_3">2 veces</string>
    <string name="rb7_4">3 o más veces</string>
    <string name="q8">8. ¿Cuántas personas le acompañan? </string>
    <string name="rb8_1">0</string>
    <string name="rb8_2">De 1 a 3 personas</string>
    <string name="rb8_3">De 4 a 6 personas</string>
    <string name="rb8_4">De 7 a 9 personas</string>
    <string name="rb8_5">10 o más personas</string>
    <string name="q9">9. Medio de transporte en el que llegó al ANP: </string>
    <string name="rb9_1">Automóvil particular</string>
    <string name="rb9_2">Transporte público</string>
    <string name="rb9_3">Vehículo de un tour</string>
    <string name="rb9_4">Bicicleta</string>
    <string name="rb9_5">Otro</string>
    <string name="q10">10. Duración de la visita: </string>
    <string name="rb10_1">Menos de una 1 hora</string>
    <string name="rb10_2">De 1 a 2 horas</string>
    <string name="rb10_3">De 2 a 4 horas</string>
    <string name="rb10_4">Más de 4 horas</string>
    <string-array name="filter_options">
        <item>Fecha</item>
        <item>Tiempo de ruta</item>
        <item>Distancia</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="diez">10</string>
    <string name="q3">3. Lugar de procedencia:</string>
    <string name="q4">4. ¿Qué lo motivó a venir a el ANP? (Uno o varios).</string>
    <string name="cb_4_1">a. El paisaje</string>
    <string name="cb_4_2">b. El costo accesible</string>
    <string name="cb_4_3">c. La cercanía</string>
    <string name="cb_4_4">d. Las actividades al aire libre y contacto con la naturaleza</string>
    <string name="cb_4_5">e. Ampliar el conocimiento sobre la naturaleza</string>
    <string name="cb_4_6">f. Practicar deportes extremos</string>
    <string name="cb_4_7">g. Interés por la cultura local</string>
    <string name="enviar_encuesta">Enviar Encuesta</string>
    <string name="titulo_sec2">Servicios</string>
    <string name="q11">11. Aproximadamente, ¿cuánto dinero gastó usted en el ANP? </string>
    <string name="rb11_1">Entre $100 y $500 pesos</string>
    <string name="rb11_2">Entre $501 y $1000 pesos</string>
    <string name="rb11_3">Entre $1001 y $2000 pesos</string>
    <string name="rb11_4">Más de $2000 pesos</string>
    <string name="q12">12. ¿Qué tan complicado es llegar al ANP? </string>
    <string name="rb12_1">Poco </string>
    <string name="rb12_2">Regular</string>
    <string name="rb12_3">Muy complicado</string>
    <string name="q13">13.¿Qué tipo de servicios pudo identificar dentro de la ANP? (PC)</string>
    <string name="cb13_1">Tienda general</string>
    <string name="cb13_2">Venta de artesanías </string>
    <string name="cb13_3">Restaurantes, fondos o puestos de comida</string>
    <string name="cb13_4">Centro de visitantes y/o información turística</string>
    <string name="cb13_5">Guía de turistas</string>
    <string name="cb13_6">Renta de equipo y accesorios</string>
    <string name="cb13_7">Vigilancia</string>
    <string name="cb13_8">Sanitarios</string>
    <string name="cb13_9">Botes de basura</string>
    <string name="q14">14. Del ANP, ¿cómo califica los aspectos siguientes?</string>
    <string name="rb14_1">Accesibilidad</string>
    <string name="rb14_2">Instalaciones</string>
    <string name="rb14_3">Señalización</string>
    <string name="rb14_4">Información disponible sobre el ANP en el sitio</string>
    <string name="rb14_5">Costo de acceso</string>
    <string name="rb14_6">Horario de funcionamiento</string>
    <string name="rb14_7">Sanitarios</string>
    <string name="rb14_8">Reglamento</string>
    <string name="rb14_a">0</string>
    <string name="rb14_b">1</string>
    <string name="rb14_c">2</string>
    <string name="r14">0=malo 1=regular 2=bueno</string>
    <string name="q15">15. ¿Por qué razón elige un tipo de alimento a consumir cuando visita un ANP?</string>
    <string name="rb15_1">Precio</string>
    <string name="rb15_2">Sabor</string>
    <string name="rb15_3">Calidad del producto</string>
    <string name="rb15_4">Facilidad para el consumo</string>
    <string name="rb15_5">Medidas de higiene</string>
    <string name="rb15_6">Probar productos y recetas locales</string>
    <string name="rb15_7">Recomendaciones hechas en internet y/o redes sociales</string>
    <string name="rb15_8">Otro</string>
    <string name="rb15_a">0</string>
    <string name="rb15_b">1</string>
    <string name="rb15_c">2</string>
    <string name="rb15_d">3</string>
    <string name="rb15_e">4</string>
    <string name="r15">0=Nada importante 1=Poco importante 2=Regular 3=Imporante 4=Muy importante</string>
    <string name="q16">16. ¿Qué tipo de alimentos le gustaría que estuvieran disponibles dentro del ANP?</string>
    <string name="cb16_1">Alimentos propios del lugar</string>
    <string name="cb16_2">Comida rápida</string>
    <string name="cb16_3">Snacks y bocadillos</string>
    <string name="cb16_4">Otro</string>
    <string name="q17">17. ¿Cuánto dinero pagaría por persona por la comida de su preferencia en el ANP?</string>
    <string name="rb17_1">Menos de $100 pesos (5 dólares)</string>
    <string name="rb17_2">Entre $100 y $250 pesos (5 a 12 dólares)</string>
    <string name="rb17_3">Entre $250 y $450 pesos (12 a 22 dólares)</string>
    <string name="rb17_4">Más de $500 pesos (25 dólares)</string>
    <string name="q18">18. ¿Qué tipo de recorrido prefiere dentro del ANP?</string>
    <string name="rb18_1">A pie</string>
    <string name="rb18_2">En bicicleta</string>
    <string name="rb18_3">A caballo</string>
    <string name="rb18_4">En cuatrimoto</string>
    <string name="rb18_5">Otro</string>
    <string name="q19">19. De los recursos observados, ¿cuál disfrutó más?</string>
    <string name="rb19_1">Flora</string>
    <string name="rb19_2">Fauna</string>
    <string name="rb19_3">Paisaje</string>
    <string name="rb19_4">Cuerpos de agua</string>
    <string name="rb19_5">Manifestaciones culturales</string>
    <string name="rb19_6">Estilo de vida de la población</string>
    <string name="rb19_7">Otro</string>
    <string name="seccion3">¡Regresa Pronto!</string>
    <string name="q20">20. Considera que el tiempo de su visita dentro del ANP fue:</string>
    <string name="rb20_a">Suficiente</string>
    <string name="rb20_b">Insuficiente</string>
    <string name="q21">21. ¿Qué sensaciones le produce haber estado en el ANP?</string>
    <string name="rb21_a">Tranquilidad</string>
    <string name="rb21_b">Unión con la naturaleza</string>
    <string name="rb21_c">Energía</string>
    <string name="rb21_d">Tristeza</string>
    <string name="rb21_e">Desolación</string>
    <string name="rb22_a">Lugar 1</string>
    <string name="rb22_b">Lugar 2</string>
    <string name="rb22_d">Lugar 4</string>
    <string name="rb22_c">Lugar 3</string>
    <string name="q22">22 ¿Qué lugar o sitio visitado dentro del ANP le gustó más?</string>
    <string name="q23">23. La mejor anécdota de su familia se relaciona con:</string>
    <string name="rb23_a">Familia o amigos</string>
    <string name="rb23_b">Los recursos naturales</string>
    <string name="rb24_a">Si</string>
    <string name="rb24_b">No. ¿Por qué?</string>
    <string name="rb25_b">No</string>
    <string name="q24">24. ¿La visita al ANP cumplió con sus expectativas?</string>
    <string name="q26">26. ¿Consideras que existe algún peligro para los turistas al visitar el ANP?</string>
    <string name="q25">25. ¿Considera que se debe seguir promoviendo la visita de turistas al sitio?</string>
    <string name="cb26_a">Animales</string>
    <string name="cb26_c">Cuerpos de Agua</string>
    <string name="cb26_b">Plantas</string>
    <string name="cb26_d">Acantilados</string>
    <string name="cb26_e">Ninguno</string>
    <string name="q27">27. ¿Cuál considera que es la principal ventaja del ANP para la actividad turística?</string>
    <string name="rb27_a">Fácil acceso</string>
    <string name="rb27_d">Actividades recreativas</string>
    <string name="rb27_b">Servicios básicos (sanitarios, comedor)</string>
    <string name="rb27_c">Contacto con la naturaleza</string>
    <string name="rb27_e">Otro</string>
    <string name="q28">28. ¿Cuál considera que es la principal desventaja del ANP para la actividad turística?</string>
    <string name="rb28_a">Difícil acceso</string>
    <string name="rb28_b">Falta de servicios o mala calidad en ellos (sanitarios, comedor)</string>
    <string name="rb28_c">Instalaciones con mal aspecto</string>
    <string name="rb28_e">Falta de actividades recreativas o mala calidad de ellas</string>
    <string name="q29">29. ¿Utiliza redes sociales para conocer los sitios que visita?</string>
    <string name="cb29_a">Facebook</string>
    <string name="cb29_b">Instagram</string>
    <string name="cb29_c">Twitter</string>
    <string name="cb29_d">Youtube </string>
    <string name="cb29_e">Pinterest</string>
    <string name="cb29_f">Otra</string>
    <string name="q30">30. ¿Ha tenido referencia del ANP por recomendación de alguna red social?</string>
    <string name="q31">31. ¿Visitó antes algún lugar cercano a esta ANP dentro de este viaje?</string>
    <string name="q32">32. ¿Visitará después algún lugar cercano a esta ANP dentro de este viaje?</string>
    <string name="q33">33. ¿Nos ayudaría con alguna publicación suya utilizando el #ANP?</string>
    <string name="q34">34. Por las características de este sitio visitado, la cantidad de personas que considera debería recibirse diariamente y sin que perjudique el lugar, podría ser:</string>
    <string name="q35">35. Para usted, el número de turistas que llegan a este sitio es:</string>
    <string name="rb35_a">Demasiado</string>
    <string name="rb35_b">Abundante</string>
    <string name="rb35_c">Regular</string>
    <string name="rb35_d">Escaso</string>
    <string name="rb35_e">Nulo</string>
    <string name="q36">36. ¿Regresaría usted a esta ANP?</string>
    <string name="q37">37. ¿Recomendaría a alguien visitar esta ANP?</string>
    <string name="q37_b">No</string>
    <string name="q37_a">Sí</string>
    <string name="q36_b">No</string>
    <string name="q36_a">Sí</string>
</resources>